--- a/src/vec/vec/impls/mpi/cupm/makefile
+++ b/src/vec/vec/impls/mpi/cupm/makefile
@@ -1,16 +1,12 @@
 -include ../../../../../../petsckdir.mk
 #requirespackage 'PETSC_HAVE_HIP'
 
-SOURCEC  =
-SOURCEHIP = vechip2.hip.cpp vechip.hip.cpp
-SOURCEF  =
-SOURCEH  =
+SOURCEH  = vecmpicupm.hpp
 LIBBASE  = libpetscvec
+DIRS     = cuda hip
 MANSEC   = Vec
-LOCDIR   = src/vec/vec/impls/seq/seqhip/
-DIRS     =
+LOCDIR   = src/vec/vec/impls/mpi/cupm/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
 include ${PETSC_DIR}/lib/petsc/conf/test
-
