--- a/src/vec/vec/impls/mpi/makefile
+++ b/src/vec/vec/impls/mpi/makefile
@@ -5,7 +5,7 @@ SOURCEF  =
 SOURCEH  = pvecimpl.h
 LIBBASE  = libpetscvec
 MANSEC   = Vec
-DIRS     = mpiviennacl mpiviennaclcuda mpicuda kokkos mpihip
+DIRS     = mpiviennacl mpiviennaclcuda kokkos cupm
 LOCDIR   = src/vec/vec/impls/mpi/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
