--- a/src/vec/vec/utils/makefile
+++ b/src/vec/vec/utils/makefile
@@ -1,6 +1,8 @@
 -include ../../../../petsckdir.mk
 
-SOURCEC  = vinv.c vecio.c comb.c vecstash.c vecs.c vsection.c projection.c vecglvis.c
+ALL: lib
+
+SOURCEC  = vinv.c vecio.c comb.c vecstash.c vecs.c vsection.c projection.c vecglvis.c vecstreams.c
 SOURCEF  =
 SOURCEH  =
 DIRS     = matlab tagger
