HIP: rename hip.cpp to hip.cxx to have uniform names as others like sycl.cxx and kokkos.cxx

--- a/src/sys/memory/hip/makefile
+++ b/src/sys/memory/hip/makefile
@@ -5,7 +5,7 @@ ALL: lib
 CFLAGS   =
 FFLAGS   =
 SOURCEC  =
-SOURCEHIP = mhiphost.hip.cpp
+SOURCEHIP = mhiphost.hip.cxx
 SOURCEF  =
 SOURCEH  =
 MANSEC   = Sys
