--- a/src/sys/objects/device/impls/cupm/hip/makefile
+++ b/src/sys/objects/device/impls/cupm/hip/makefile
@@ -5,7 +5,7 @@ CFLAGS    =
 FFLAGS    =
 CPPFLAGS  =
 SOURCEC	  =
-SOURCEHIP = cupmcontext.hip.cpp
+SOURCEHIP = cupmcontext.hip.cxx
 SOURCEF	  =
 SOURCEH   =
 MANSEC	  = Sys
