--- a/src/snes/tutorials/makefile
+++ b/src/snes/tutorials/makefile
@@ -9,7 +9,7 @@ EXAMPLESC	 = ex1.c ex2.c ex3.c  ex5.c ex6.c ex9.c \
                    ex12.c ex14.c ex15.c ex17.c ex18.c ex19.c ex21.c ex22.c \
                    ex25.c ex28.c ex30.c ex33.c \
                    ex35.c ex42.c ex46.c ex48.c \
-                   ex56.c ex58.c ex59.c \
+                   ex55.c ex56.c ex58.c ex59.c \
                    ex62.c ex69.c ex70.c ex77.c ex78.c \
                    ex47cu.cu
 EXAMPLESF	 = ex1f.F90 ex5f.F90 ex5f90.F90 ex5f90t.F90 ex40f90.F90 ex73f90t.F90
@@ -21,6 +21,13 @@ CLEANFILES       = ex5f90t
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
+
+
+ex55objs := ex55.o
+ifneq ($(KOKKOS_LIB),)
+  ex55objs += ex55k.o
+endif
+ex55 : ${ex55objs}
 
 #-------------------------------------------------------------------------
 
