--- a/src/dm/interface/makefile
+++ b/src/dm/interface/makefile
@@ -3,7 +3,7 @@ ALL: lib
 
 CFLAGS   =
 FFLAGS   =
-SOURCEC  = dm.c dmregall.c dmget.c dmi.c dmglvis.c dlregisdmdm.c dmceed.c dmgenerate.c
+SOURCEC  = dm.c dmregall.c dmget.c dmi.c dmglvis.c dlregisdmdm.c dmceed.c dmgenerate.c dmcoordinates.c dmperiodicity.c
 SOURCEF  =
 SOURCEH  =
 LIBBASE  = libpetscdm
