throw-away commit once https://gitlab.com/petsc/petsc/-/merge_requests/5321 is merged

--- a/src/sys/objects/device/util/makefile
+++ b/src/sys/objects/device/util/makefile
@@ -1,9 +1,11 @@
 -include ../../../../../petsckdir.mk
 
-SOURCEC	= utility.c
-MANSEC	= Sys
-LIBBASE	= libpetscsys
-LOCDIR	= src/sys/objects/device/util/
+SOURCEC   = managedtype_c.c utility.c
+SOURCEH   = ../interface/managedtype.inl
+MANSEC	  = Sys
+LIBBASE	  = libpetscsys
+DIRS	  =
+LOCDIR	  = src/sys/objects/device/util/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
