split petscdevice.h into petscdevice_cuda.h, petscdevice_hip.h, and petscdevice_cupm.h

--- a/src/sys/objects/device/makefile
+++ b/src/sys/objects/device/makefile
@@ -6,7 +6,7 @@ SOURCEF	  =
 SOURCEH	  =
 MANSEC	  = Sys
 LIBBASE	  = libpetscsys
-DIRS	  = interface impls tests
+DIRS	  = interface impls tests util
 LOCDIR	  = src/sys/objects/device/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
