--- a/lib/petsc/conf/rules
+++ b/lib/petsc/conf/rules
@@ -684,62 +684,45 @@ GITSRCEXCL = \
 checkbadSource:
 	-@git --no-pager grep -n -P 'self\.gitcommit' -- config/BuildSystem/config/packages | grep 'origin/' ; if [[ "$$?" == "0" ]]; then echo "Error: Do not use a branch name in a configure package file"; false; fi
 	-@${RM} -f checkbadSource.out
-	-@echo "Double blank lines in file ---------------------------" > checkbadSource.out
+	-@echo "------Double blank lines in file -----------------------------------" > checkbadSource.out
 	-@git --no-pager grep -n -P '^$$' -- ${GITSRC} > doublelinecheck.out
 	-@${PYTHON} ${PETSC_DIR}/lib/petsc/bin/maint/doublelinecheck.py doublelinecheck.out >> checkbadSource.out
 	-@${RM} -f doublelinecheck.out
-	-@echo "Tabs in file -----------------------------------------" >> checkbadSource.out
+	-@echo "------Tabs in file -------------------------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P '\t' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "White space at end of line ---------------------------" >> checkbadSource.out
+	-@echo "------White space at end of line -----------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P ' $$' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "Space after ( ----------------------------------------" >> checkbadSource.out
-	-@git --no-pager grep -n -P '\( ' -- ${GITSRC} | grep PetscErrorCode >> checkbadSource.out;true
-	-@git --no-pager grep -n -P 'if \( ' -- ${GITSRC} >> checkbadSource.out;true
-	-@git --no-pager grep -n -P 'for \( ' -- ${GITSRC} >> checkbadSource.out;true
-	-@git --no-pager grep -n -P 'while \( ' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "Space before ) ---------------------------------------" >> checkbadSource.out
-	-@git --no-pager grep -n -P '(?!.*\\$$)\w+ +\)' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "No space after if, for or while ----------------------" >> checkbadSource.out
-	-@git --no-pager grep -n -P -e '[^_]for\(' -e '[^_]if\(' -e 'while\(' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "Two ;; -----------------------------------------------" >> checkbadSource.out
+	-@echo "------Two ;; -------------------------------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P -e ';;' -- ${GITSRC} | grep -v ' for (' >> checkbadSource.out;true
-	-@echo "PetscCall for an MPI error code ----------------------" >> checkbadSource.out
+	-@echo "------PetscCall for an MPI error code ------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P -e '= MPI[U]*_\w*\(.*PetscCall' -- ${GITSRC} | grep -v MPIU_File >> checkbadSource.out;true
-	-@echo "Missing if (ierr) return ierr; -----------------------" >> checkbadSource.out
+	-@echo "------Missing if (ierr) return ierr; -------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P -e 'ierr = PetscInitialize\(' -- '*.[ch]' '*.cpp' '*.cxx' '*.cu' | grep -v 'if (ierr) return ierr;' | egrep "(test|tutorial)" >> checkbadSource.out;true
-	-@echo "DOS file (with DOS newlines) -------------------------" >> checkbadSource.out
+	-@echo "------DOS file (with DOS newlines) ---------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P '\r' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "{ before SETERRQ -------------------------------------" >> checkbadSource.out
+	-@echo "------{ before SETERRQ ---------------------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P '{SETERRQ' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "{ on the same line as a function definition ----------" >> checkbadSource.out
-	-@git --no-pager grep -n -P -e '^\s*(PetscErrorCode|void|inline|PETSC_EXTERN|PETSC_INTERN|static inline)[ ]+[a-zA-Z0-9_-]+(.*)(\s*){$$' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "PetscCall following SETERRQ --------------------------" >> checkbadSource.out
+	-@echo "------PetscCall following SETERRQ ----------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P 'SETERRQ' -- ${GITSRC} | grep ";PetscCall" >> checkbadSource.out;true
-	-@echo "SETERRQ() without defined error code -----------------" >> checkbadSource.out
+	-@echo "------SETERRQ() without defined error code -------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P 'SETERRQ\((?!\))' -- ${GITSRC} | grep -v PETSC_ERR  | grep " if " | grep -v "__VA_ARGS__" | grep -v flow.c >> checkbadSource.out;true
-	-@echo "SETERRQ() with trailing newline ----------------------" >> checkbadSource.out
+	-@echo "------SETERRQ() with trailing newline ------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P "SETERRQ[1-9]?.*\\\n\"" -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "define keyword in test definition --------------------" >> checkbadSource.out
+	-@echo "------Define keyword used in test definition -----------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P -e 'requires:.*define\(' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "No spaces before { after if|for|while|switch ---------" >> checkbadSource.out
-	-@git --no-pager grep -n -P '(for|while|if|switch)(.*)\){$$' -- ${GITSRC} | grep -v PETSC_ERR  | grep " if " | grep -v flow.c >> checkbadSource.out;true
-	-@echo "No new line at end of file ---------------------------" >> checkbadSource.out
+	-@echo "------No new line at end of file -----------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P '[^\n]\z' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "No space after ierr ----------------------------------" >> checkbadSource.out
-	-@git --no-pager grep -n -P 'ierr=' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "Using if (condition) SETERRQ(...) instead of PetscCheck()" >> checkbadSource.out
+	-@echo "------Using if (condition) SETERRQ(...) instead of PetscCheck() ----" >> checkbadSource.out
 	-@git --no-pager grep -n -P ' if +(.*) *SETERRQ' -- ${GITSRC} | grep -v 'PetscUnlikelyDebug' | grep -v 'petscerror.h' >> checkbadSource.out;true
-	-@echo "Using if (PetscUnlikelyDebug(condition)) SETERRQ(...) instead of PetscAssert()" >> checkbadSource.out
+	-@echo "------Using if (PetscUnlikelyDebug(condition)) SETERRQ(...) instead of PetscAssert()" >> checkbadSource.out
 	-@git --no-pager grep -n -P -E ' if +\(PetscUnlikelyDebug.*\) *SETERRQ' -- ${GITSRC} | grep -v petscerror.h >> checkbadSource.out;true
-	-@echo "Using PetscFunctionReturn(ierr) ----------------------" >> checkbadSource.out
+	-@echo "------Using PetscFunctionReturn(ierr) ------------------------------" >> checkbadSource.out
 	-@git --no-pager grep -n -P 'PetscFunctionReturn(ierr)' -- ${GITSRC} >> checkbadSource.out;true
-	-@echo "Defining a returning macro without PetscMacroReturns()" >> checkbadSource.out
+	-@echo "------Defining a returning macro without PetscMacroReturns() -------" >> checkbadSource.out
 	-@git --no-pager grep -n -P 'define .*\w+;\s+do' -- ${GITSRC} | egrep -v '(PetscMacroReturns|PetscDrawCollectiveBegin|MatPreallocateBegin|PetscOptionsBegin|PetscObjectOptionsBegin|PetscOptionsHeadEnd)' >> checkbadSource.out;true
-	-@echo "Defining a error checking macro using CHKERR style ---" >> checkbadSource.out
+	-@echo "-----Defining an error checking macro using CHKERR style -----------" >> checkbadSource.out
 	-@git --no-pager grep -n -P 'define\s+CHKERR\w*\(.*\)\s*do\s+{' -- ${GITSRC} >> checkbadSource.out;true
-#	-@echo "Missing CHKERRQ --------------------------" >> checkbadSource.out
-#	-@git --no-pager grep -P 'ierr = ' -- '*.[ch]' '*.cxx' | grep ');' | egrep -v '(PetscFinalize|PetscInitialize|sys|benchmark|interfaces|fun3d|ftn-custom|f90-custom|CHK)' >> checkbadSource.out;true
-	@a=`cat checkbadSource.out | wc -l`; l=`expr $$a - 24` ;\
+	@a=`cat checkbadSource.out | wc -l`; l=`expr $$a - 19` ;\
          if [ $$l -gt 0 ] ; then \
            echo $$l " files with errors detected in source code formatting" ;\
            cat checkbadSource.out ;\
