--- a/src/sys/objects/device/interface/makefile
+++ b/src/sys/objects/device/interface/makefile
@@ -1,7 +1,7 @@
 -include ../../../../../petsckdir.mk
 #requiresdefine 'PETSC_HAVE_CXX'
 
-SOURCECXX = dcontext.cxx device.cxx devicereg.cxx managedtype_cxx.cxx memory.cxx
+SOURCECXX = dcontext.cxx device.cxx devicereg.cxx managedtype_cxx.cxx memory.cxx global_dcontext.cxx
 SOURCEH   = managedtype.inl
 MANSEC	  = Sys
 LIBBASE	  = libpetscsys
