--- a/src/vec/vec/interface/makefile
+++ b/src/vec/vec/interface/makefile
@@ -1,6 +1,7 @@
 -include ../../../../petsckdir.mk
 
 SOURCEC  = vector.c veccreate.c vecreg.c vecregall.c dlregisvec.c rvector.c
+SOURCECXX = vector_async.cxx
 SOURCEF  =
 SOURCEH  =
 DIRS     =
