Restarting NetRS and DGNet in the new petsc version

--- a/src/dm/dt/makefile
+++ b/src/dm/dt/makefile
@@ -1,6 +1,6 @@
 -include ../../../petscdir.mk
 
-DIRS    = interface tests space dualspace fe fv
+DIRS    = interface tests space dualspace fe fv riemannsolver netrs
 MANSEC  = DM
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
