--- a/src/ts/tutorials/advection-diffusion-reaction/makefile
+++ b/src/ts/tutorials/advection-diffusion-reaction/makefile
@@ -11,6 +11,7 @@ include ${PETSC_DIR}/lib/petsc/conf/rules
 include ${PETSC_DIR}/lib/petsc/conf/test
 
 ex5: ex5.o $(OBJECTS_EX5)
+ex5_color: ex5_color.o $(OBJECTS_EX5)
 ex5adj: ex5adj.o $(OBJECTS_EX5)
 ex5adj_mf: ex5adj_mf.o $(OBJECTS_EX5)
 ex5opt_ic: ex5opt_ic.o $(OBJECTS_EX5)
