--- a/src/dm/label/impls/makefile
+++ b/src/dm/label/impls/makefile
@@ -1,13 +1,9 @@
 -include ../../../petscdir.mk
 
-SOURCEC  = dmlabel.c
-SOURCEF  =
-SOURCEH  =
-DIRS     = impls tutorials
-LIBBASE  = libpetscdm
-MANSEC   = DM
-SUBMANSEC= DMLabel
-LOCDIR   = src/dm/label/
+DIRS      = ephemeral
+LOCDIR    = src/dm/label/impls/
+MANSEC    = DM
+SUBMANSEC = DMLabel
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
