WIP, rework of NetRS, seperating into a local solver NetRP and NetRS as a manager class for solving the full network level Riemann Problem(s)

--- a/src/dm/dt/netrs/makefile
+++ b/src/dm/dt/netrs/makefile
@@ -3,7 +3,7 @@ ALL: lib
 
 SOURCEC   = fluxfun.c
 SOURCEH   = ../../../../include/petsc/private/netrsimpl.h ../../../../include/petscnetrs.h fluxfun.h
-DIRS      = interface impls tests
+DIRS      = interface impls tests localnetrp
 LOCDIR    = src/dm/dt/netrs
 MANSEC    = DM
 SUBMANSEC = NRS
