--- a/src/dm/dt/netrs/localnetrp/makefile
+++ b/src/dm/dt/netrs/localnetrp/makefile
@@ -3,7 +3,7 @@ ALL: lib
 
 SOURCEC   = 
 SOURCEH   = ../../../../include/petsc/private/localnetrpimpl.h ../../../../include/petscnetrp.h
-DIRS      = interface impls tests
+DIRS      = interface impls
 LOCDIR    = src/dm/dt/netrs/localnetrp
 MANSEC    = DM
 SUBMANSEC = NRS
