--- a/src/dm/impls/network/tutorials/dgnet/tests/makefile
+++ b/src/dm/impls/network/tutorials/dgnet/tests/makefile
@@ -34,9 +34,7 @@ ex10 : $(OBJECTS_DGNET)  $(OBJECTS_RIVER)
 ex11 : $(OBJECTS_DGNET)  $(OBJECTS_RIVER)
 
 .PHONY: all
-all : ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10
-
-VALUE = 10
+all : ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12 
 
 clean ::
 	rm ${OBJECTS_RIVER} ${OBJECTS_DGNET}
