--- a/src/sys/objects/device/interface/ftn-custom/makefile
+++ b/src/sys/objects/device/interface/ftn-custom/makefile
@@ -1,13 +1,9 @@
+-include ../../../../../../petscdir.mk
 #requiresdefine 'PETSC_HAVE_FORTRAN'
-ALL: lib
-CFLAGS   =
-FFLAGS   =
-SOURCEC  = zdcontextf.c
-SOURCEF  =
-SOURCEH  =
-DIRS     =
-LIBBASE  = libpetscsys
-LOCDIR   = src/sys/objects/device/interface/ftn-custom/
+
+SOURCEC = zdcontextf.c
+LIBBASE = libpetscsys
+MANSEC  = Sys
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
