--- a/src/ksp/ksp/utils/lmvm/makefile
+++ b/src/ksp/ksp/utils/lmvm/makefile
@@ -4,7 +4,7 @@ SOURCEC  = lmvmimpl.c lmvmutils.c
 SOURCEH  = lmvm.h
 LIBBASE  = libpetscksp
 MANSEC   = KSP
-DIRS     = sr1 dfp bfgs cdbfgs symbrdn brdn badbrdn diagbrdn
+DIRS     = sr1 dfp bfgs cdbfgs symbrdn brdn diagbrdn
 LOCDIR   = src/ksp/ksp/utils/lmvm/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
