feat(NetRP): stuff

--- a/src/dm/impls/network/tutorials/dgnet/tests/makefile
+++ b/src/dm/impls/network/tutorials/dgnet/tests/makefile
@@ -32,9 +32,11 @@ ex8 : $(OBJECTS_DGNET) $(OBJECTS_RIVER)
 ex9:  $(OBJECTS_DGNET) $(OBJECTS_RIVER)
 ex10 : $(OBJECTS_DGNET)  $(OBJECTS_RIVER)
 ex11 : $(OBJECTS_DGNET)  $(OBJECTS_RIVER)
+ex14 : $(OBJECTS_DGNET)  $(OBJECTS_RIVER)
+
 
 .PHONY: all
-all : ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12 
+all : ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12 ex13 ex 14
 
 clean ::
 	rm ${OBJECTS_RIVER} ${OBJECTS_DGNET}
