Add simple least-squares test of TAOLMVM

--- a/src/ksp/ksp/utils/lmvm/cdbfgs/makefile
+++ b/src/ksp/ksp/utils/lmvm/cdbfgs/makefile
@@ -1,17 +1,7 @@
+-include ../../../../petscdir.mk
 
-
-ALL: lib
-
-CFLAGS   =
-FFLAGS   =
-SOURCEC  = cdbfgs.c
-SOURCEF  =
-SOURCEH  = cdbfgs.h
 LIBBASE  = libpetscksp
-DIRS     =
 MANSEC   = KSP
-LOCDIR   = src/ksp/ksp/utils/lmvm/cdbfgs/
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
-include ${PETSC_DIR}/lib/petsc/conf/rules
-include ${PETSC_DIR}/lib/petsc/conf/test
+include ${PETSC_DIR}/lib/petsc/conf/rules.doc
